--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -10,7 +10,7 @@ body:
         required: true
 - type: textarea
   attributes:
-    label: Description
+    label: Bug Description
     description: Please describe the issue your are having and any relevant steps needed to reproduce the error.
     placeholder: |
       Describe your issue and any steps needed to reproduce the error.
