--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -11,13 +11,13 @@ body:
         required: true
 - type: textarea
   attributes:
-    label: Is your feature request related to a problem? Please describe.
+    label: Feature Request
     description: A clear and concise description the feature you would like to see implemented.
   validations:
     required: true
 - type: textarea
   attributes:
-    label: Describe alternatives you've considered
+    label: Alternatives you've considered
     description: A clear and concise description of any alternative solutions or features you've considered.
   validations:
     required: false
