--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -4,39 +4,30 @@ body:
 - type: checkboxes
   attributes:
     label: Is there already an issue for your problem?
-    description: Please make sure you are not creating an already submitted <a href="https://github.com/RileyXX/TMDB-Trakt-Syncer/issues">Issue</a>. Be sure to check closed issues as well.
+    description: Please make sure you are not creating an already submitted <a href="https://github.com/RileyXX/IMDB-Trakt-Syncer/issues">Issue</a>. Be sure to check closed issues as well.
     options:
       - label: I have checked older issues, open and closed
         required: true
 - type: textarea
   attributes:
     label: Bug Description
-    description: Please describe the issue your are having and any relevant steps needed to reproduce the error.
+    description: Please describe the issue your are having, include error messages and any relevant steps needed to reproduce the error.
     placeholder: |
-      Describe your issue and any steps needed to reproduce the error.
-    render: markdown
+      Error Message: `paste code here`
+      Steps needed to reproduce the error:
+      1. ...
   validations:
     required: true
 - type: textarea
   attributes:
     label: Environment
-    description: Please provide the details of the system TMDB-Trakt-Syncer is running on and the method you are using to run the script.
+    description: Please provide the details of the system IMDB-Trakt-Syncer is running on and the method you are using to run the script.
     placeholder: |
       OS: Windows 10 or 11/Linux/macOS etc
       Using pip install method: yes
       Using manual no pip install method: no
-    render: markdown
   validations:
     required: true
-- type: textarea
-  attributes:
-    label: Error Messages
-    description: |
-      Place any relevant error messages you noticed here.
-      Please include the error message with your personal information removed in case we need more information.
-    render: text
-  validations:
-    required: false
 - type: textarea
   attributes:
     label: Screenshots
